--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,201 +1,241 @@
-*{
+* {
   margin: 0;
   padding: 0;
-  box-sizing:border-box;
+  box-sizing: border-box;
 }
+
 #uno {
   background-color: rgba(93, 82, 63, 0.621);
 }
+
 #dos {
   background-color: rgba(21, 77, 39, 0.309);
 }
+
 #tres {
   background-color: rgba(93, 82, 63, 0.621);
 }
+
 #cuatro {
   background-color: rgba(21, 77, 39, 0.309);
 }
+
 #cinco {
   background-color: rgba(93, 82, 63, 0.621);
 }
 
-.divA1{
-    display: flex;
-    justify-content: center;   
-    align-items: center;
-    flex-direction: row;
-    justify-content: space-between;
-    justify-content: end;  
-    background-color: rgba(93, 82, 63, 0.694);
-    padding: 15px;
-}
-.divA2{
+.divA1 {
   display: flex;
-  justify-content: center;   
+  justify-content: center;
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
-  justify-content: end;  
+  justify-content: end;
+  background-color: rgba(93, 82, 63, 0.694);
+  padding: 15px;
+}
+
+.divA2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  justify-content: end;
   padding: 15px;
   background-color: rgb(50, 94, 88);
 }
-.divAul1{
+
+.divAul1 {
   display: flex;
   align-items: center;
   justify-content: center;
   list-style: none;
 }
-.divAul2{
+
+.divAul2 {
   display: flex;
   align-items: center;
   justify-content: center;
   list-style: none;
 }
-.divAul1 li{
+
+.divAul1 li {
   margin: 10px;
   font-size: 120%;
 }
-.divAul1 a{
+
+.divAul1 a {
   color: rgb(0, 0, 0);
 }
-.divAul2 li{
+
+.divAul2 li {
   margin: 10px;
   font-size: 120%;
 }
-.divAul2 a{
+
+.divAul2 a {
   color: white;
 }
 
-.logo{
+.logo {
   align-items: center;
   justify-content: center;
-  display:flex;
+  display: flex;
   margin-right: 1250px;
 }
-  a {
-    color: black;
-    text-decoration: none;
-  }
- .icono{
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+.icono {
   font-size: 25px;
   color: black;
- }
- .contenido{
+}
+
+.contenido {
   text-align: center;
   margin-top: 20px;
   margin-bottom: 10px;
- }
- .contenido2{
-  display:flex;
+}
+
+.contenido2 {
+  display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  display:block;
- }
- .contenido3{
- margin-left: 500px;
- margin-right: 500px;
- }
+  display: block;
+}
 
-.footer2{
+.contenido3 {
+  margin-left: 500px;
+  margin-right: 500px;
+}
+
+.footer2 {
   bottom: 0;
   position: fixed;
-  background-color:  rgb(50, 94, 88);
+  background-color: rgb(50, 94, 88);
   width: 100%;
 }
-.footer2 a{
-  color:white;
+
+.footer2 a {
+  color: white;
 }
-.footer2 p{
-  color:white;
+
+.footer2 p {
+  color: white;
 }
-.footer1{
+
+.footer1 {
   bottom: 0;
   position: fixed;
-  background-color:  rgba(93, 82, 63, 0.694);
+  background-color: rgba(93, 82, 63, 0.694);
   width: 100%;
 }
+
 .casa {
   float: right;
-  
 }
-.casa img{
-  width:450px;
-  height:450px;
+
+.casa img {
+  width: 450px;
+  height: 450px;
 }
-  .texto-1 , .texto-2 , .texto-3 {
-    margin-bottom: 50px;
-    padding-top: 50px;
-    padding-bottom: 15px;
-  }
-.contenedor{
+
+.texto-1,
+.texto-2,
+.texto-3 {
+  margin-bottom: 50px;
+  padding-top: 50px;
+  padding-bottom: 15px;
+}
+
+.contenedor {
   margin: 100px 100px 100px 500px;
 }
-.casa1{
+
+.casa1 {
   float: right;
   margin-top: 200px;
   margin-right: 150px;
   margin-left: 50px;
 }
-.contenido-servicios{
+
+.contenido-servicios {
   margin-top: 300px;
   margin-left: 100px;
   text-align: justify;
 }
-.contenido-portafolio{
+
+.contenido-portafolio {
   align-items: center;
   justify-content: center;
-  float:right;
+  float: right;
   margin-top: 250px;
   margin-right: 170px;
 }
-.imagen-portafolio img{
+
+.imagen-portafolio img {
   margin-top: 30px;
   text-align: center;
   padding-top: 10px;
 }
-.imagen-portafolio{
+
+.imagen-portafolio {
   text-align: center;
 }
+
 .titulo-portafolio {
   text-align: center;
   padding-bottom: 10px;
 }
-.imagen-galeria{
-  float:right;
+
+.imagen-galeria {
+  float: right;
   justify-content: center;
   margin-right: 250px;
   margin-top: 150px;
 }
-.galeria{
+
+.galeria {
   justify-content: start;
   align-items: center;
   display: flex;
   margin-top: 250px;
   margin-left: 150px;
 }
-.imagen-uno{
+
+.imagen-uno {
   padding: 20px;
 }
-.imagen-dos{
+
+.imagen-dos {
   padding: 20px;
 }
-.imagen-tres{
+
+.imagen-tres {
   padding: 20px;
 }
-#after_submit{
+
+#after_submit {
   justify-content: start;
   margin-left: 400px;
   margin-top: 200px;
   font-size: 30px;
 }
-.row{
+
+.row {
   margin-top: 30px;
   margin-bottom: 30px;
 }
-#submit_button{
+
+#submit_button {
   font-size: 20px;
 }
-.input{
+
+.input {
   font-size: 20px;
 }
