--- a/css/estilo.css
+++ b/css/estilo.css
@@ -135,17 +135,23 @@ a {
   margin: 100px 100px 100px 500px;
 }
 
-.casa1 {
-  float: right;
+.servicios{
+  display:grid;
+  grid-template-columns: repeat(2,1fr);
+  margin-left: 100px;
   margin-top: 200px;
-  margin-right: 150px;
-  margin-left: 50px;
+  margin-right: 100px;
+}
+
+.casa1{
+  display: flex;
+  justify-content: center;
 }
 
 .contenido-servicios {
-  margin-top: 300px;
-  margin-left: 100px;
+  
   text-align: justify;
+  margin-top: 70px;
 }
 
 .contenido-portafolio {
