--- a/css/estilo.css
+++ b/css/estilo.css
@@ -154,11 +154,12 @@ margin-top: 10px;
   margin-top: 70px;
 }
 
+
 .contenido-portafolio {
   align-items: center;
   justify-content: center;
   float: right;
-  margin-top: 250px;
+  margin-top: 200px;
   margin-right: 170px;
 }
 
@@ -262,6 +263,13 @@ footer {
   font-size: 19px;
   background-color: rgb(50, 94, 88);
 
+}
+
+.p-42 {
+  padding: 1.15rem !important;
+  font-size: 19px;
+  background-color: rgba(93, 82, 63, 0.694);
+  margin-top: 663px;
 }
 
 .container {
