--- a/css/estilo.css
+++ b/css/estilo.css
@@ -93,6 +93,8 @@
 
 .logo img {
   justify-content: center;
+  width: 200px;
+  height: 100px;
 }
 
 a {
@@ -110,6 +112,11 @@ a {
   margin-top: 20px;
   margin-bottom: 10px;
 }
+.contenido img{
+  width: 600px;
+  height: 400px;
+}
+
 
 .contenido2 {
   display: flex;
@@ -158,6 +165,10 @@ a {
   display: flex;
   justify-content: center;
 }
+.casa1 img{
+  width: 600px;
+  height: 400px;
+}
 
 .contenido-servicios {
 
@@ -186,6 +197,8 @@ a {
   margin-top: 30px;
   text-align: center;
   padding-top: 10px;
+  width: 150px;
+  height: 150px;
 }
 
 .imagen-portafolio {
@@ -213,17 +226,27 @@ a {
   margin-left: 150px;
   margin-bottom: 164px;
 }
+.galeria img{
+  width: 400px;
+  height: 250px;
+}
 
 .imagen-uno {
   padding: 20px;
+  width: 150px;
+  height: 150px;
 }
 
 .imagen-dos {
   padding: 20px;
+  width: 150px;
+  height: 150px;
 }
 
 .imagen-tres {
   padding: 20px;
+  height: 150px;
+  width: 150px;
 }
 .containergaleria img:hover{
     box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
