--- a/css/estilo.css
+++ b/css/estilo.css
@@ -365,5 +365,90 @@ section {
   
 }
 @media screen and (max-width: 480px) {
+  .contenido {
+    text-align: center;
+    margin-right: 50px;
+    margin-left: 50px;
+  }
+  .contenido img{
+    width: 300px;
+    height: 200px;
+  }
+  .contenido3{
+      margin-left: 50px;
+      margin-right: 50px;
+      margin-bottom: 50px;
+      align-items: center;
+    text-align: justify;
+  }
+    .divA1 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: row;
+      justify-content: space-between;
+      justify-content: end;
+      background-color: rgba(93, 82, 63, 0.694);
+      padding: 5px;
+      display: grid;
+      grid-template-columns: repeat(2,2fr);
+    }
+    .divA1 a:hover{
+      color: white;
+      transition: 0.8s;
+    }
+    .divAul1 {
+      display: flex;
+      align-items: flex-end;
+      justify-content: flex-end;
+      list-style: none;
+    }
+    .divAul1 li {
+      margin: 10px;
+      font-size: 120%;
+    }
+    
+    .divAul1 a {
+      color: rgb(0, 0, 0);
+    }
+    .divAul1 li {
+      margin: 10px;
+      font-size: 120%;
+    }
+    
+    .divAul1 a {
+      color: rgb(0, 0, 0);
+    }
+    text-white {
+      --bs-text-opacity: 1;
+      color: rgba(var(--bs-white-rgb), var(--bs-text-opacity)) !important;
+    }
+    
+    .text-center {
+      text-align: center !important;
+    
+    }
+    
+    
+    footer {
+      display: block;
+    
+    }
+    
+    .p-4 {
+      padding: 1.15rem !important;
+      font-size: 19px;
+      background-color: rgba(93, 82, 63, 0.694);
+    
+    }
+    .p-4 a:hover{
+      color: white;
+      transition: 0.8s;
+    }
+    
+  }
+
+    
   
-}
+  
+
