--- a/css/estilo.css
+++ b/css/estilo.css
@@ -113,11 +113,13 @@ a {
   text-align: center;
   margin-top: 20px;
   margin-bottom: 10px;
+  margin-bottom: 30px;
 }
 
 .contenido img {
   width: 600px;
   height: 400px;
+  font-size: 200%;
 }
 
 
@@ -132,8 +134,8 @@ a {
 .contenido3 {
   margin-left: 500px;
   margin-right: 500px;
-  margin-bottom: 60px;
-  font-size: 150%;
+  margin-bottom: 50px;
+  font-size: 120%;
   text-align: center;
   font-style: normal;
 }
@@ -148,8 +150,11 @@ a {
 }
 
 .contenedor {
-  display: flex;
-  margin: 53px 150px 100px 400px;
+  display: grid;
+  grid-template-columns: repeat(2,4fr);
+  margin: 53px 15px 100px 0px;
+  margin-left: 30px;
+  
 }
 
 #contacto {
@@ -178,9 +183,9 @@ a {
 }
 
 .contenido-servicios {
-
-  text-align: justify;
+  text-align: center;
   margin-top: 70px;
+  font-size: 150%;
 }
 
 .portafolio {
@@ -522,4 +527,5 @@ section {
   }
 
   /*-------fin contacto-------*/
+  
 
