--- a/css/estilo.css
+++ b/css/estilo.css
@@ -25,10 +25,8 @@
 }
 
 .divA1 {
-  display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: row;
   justify-content: space-between;
   justify-content: end;
   background-color: rgba(93, 82, 63, 0.694);
@@ -43,10 +41,8 @@
 }
 
 .divA2 {
-  display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: row;
   justify-content: space-between;
   justify-content: end;
   padding: 15px;
@@ -109,6 +105,13 @@ a {
   color: black;
 }
 
+.main-index {
+  display: grid;
+  grid-template-columns: repeat(1, 2fr);
+  justify-content: center;
+  text-align: center;
+}
+
 .contenido {
   text-align: center;
   margin-top: 20px;
@@ -116,10 +119,13 @@ a {
   margin-bottom: 30px;
 }
 
-.contenido img {
+.img {
+  text-align: center;
+}
+
+.img img {
   width: 600px;
-  height: 400px;
-  font-size: 200%;
+  height: 500px;
 }
 
 
@@ -128,7 +134,6 @@ a {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  display: block;
 }
 
 .contenido3 {
@@ -159,7 +164,7 @@ a {
 
 #contacto {
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
   justify-content: end;
   margin-top: 10px;
 }
@@ -383,6 +388,161 @@ section {
   display: block;
 }
 
+@media screen and (min-width: 371px) and (max-width: 420px) {
+
+  /*---inicio index*/
+  * {
+    box-sizing: border-box;
+  }
+
+  body {
+    margin: 0;
+  }
+
+  h1 {
+    font-size: 1.6em;
+  }
+
+  h2 {
+    font-size: 1.5em;
+  }
+
+  h3 {
+    font-size: 1.3em;
+  }
+
+  p {
+    font-size: 1em;
+  }
+
+  ul {
+    list-style: none;
+  }
+
+  li {
+    font-size: 1em;
+  }
+
+  header .contenido {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding-bottom: 10px;
+  }
+
+  a:hover {
+    background-color: #0b8379;
+    color: black;
+    border-radius: 20%;
+    transition: 0.8s;
+  }
+
+  .img img {
+    height: 340px;
+    width: 100px;
+    object-fit: contain;
+  }
+
+  #nosotros {
+    display: block;
+    flex-direction: column;
+  }
+
+  .carta-1,
+  .carta-2,
+  .carta-3 {
+    color: white;
+    font-size: 20px;
+    display: block;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid whitesmoke;
+    object-fit: contain;
+  }
+
+  .carta-img {
+    height: 350px;
+    width: 100%;
+  }
+
+  .grid-container {
+    display: grid;
+    grid-template-columns: 220px;
+    grid-template-rows: 200px;
+    margin-top: 40px;
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+
+  .grid-item {
+    background-color: #CEC5B0;
+    border: 1px solid #534c4c;
+    font-size: 20px;
+    text-align: center;
+  }
+
+  .grid-item img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+
+  /*-------fin index-----*/
+  /*-------inicio servicios-----*/
+  .contenido-servicios {
+    margin-right: 0;
+  }
+
+  /*-------fin servicios-----*/
+  /*--------inicio portafolio-------*/
+
+  /*-------fin portafolio-------*/
+  /*--------inicio galeria-------*/
+
+  /*-------fin galeria-------*/
+  /*--------inicio contacto-------*/
+
+  /*-------fin contacto-------*/
+}
+
+@media screen and (max-width: 440px) {
+
+  /*------- inicio index ------*/
+  .main-index {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .img {
+    margin: 0 0 0 0;
+  }
+
+  .img img {
+    width: 70px;
+    height: 150px;
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .contenido3 {
+    margin: 0 0 0 0;
+  }
+
+  /*-------fin index-----*/
+  /*-------inicio servicios-----*/
+
+  /*-------fin servicios-----*/
+  /*--------inicio portafolio-------*/
+
+  /*-------fin portafolio-------*/
+  /*--------inicio galeria-------*/
+
+  /*-------fin galeria-------*/
+  /*--------inicio contacto-------*/
+
+  /*-------fin contacto-------*/
+}
+
 @media screen and (max-width: 480px) {
 
   /*------- inicio index ------*/
@@ -392,9 +552,14 @@ section {
     margin-left: 50px;
   }
 
-  .contenido img {
+  .img {
+    text-align: center;
+  }
+
+  .img img {
     width: 300px;
     height: 200px;
+    margin-top: 50px;
   }
 
   .contenido3 {
@@ -486,16 +651,15 @@ section {
     flex-direction: column;
     margin-top: 20px;
     margin-bottom: 0;
-    margin-right: 200000px;
-
   }
-  #contact_form{
+
+  #contact_form {
     margin-left: 60px;
     margin-bottom: 15px;
   }
 
   .row {
-    margin-top: 0; 
+    margin-top: 0;
     margin-bottom: 0;
   }
 
@@ -520,197 +684,395 @@ section {
     margin-bottom: 0;
     margin-top: 30px;
   }
-  #contacto{
-      display: flex;
-      flex-direction: column;
-    }
 
+  #contacto {
+    display: flex;
+    flex-direction: column;
   }
-  @media screen and (max-width: 491px) {
-    /*------- inicio index ------*/
-  .contenido3{
+
+}
+
+@media screen and (max-width: 491px) {
+
+  /*------- inicio index ------*/
+  .contenido3 {
     display: flex;
     justify-content: center;
   }
-  .divA1{
+
+  .divA1 {
     justify-content: center;
+    display: flex;
+    flex-direction: column;
   }
-  .divAul1 li{
+
+  .divAul1 li {
     font-size: 10000px;
   }
-  .logo img{
+
+  .logo img {
     height: 100px;
     width: 150px;
     display: flex;
     justify-content: flex-end;
     margin-left: 20px;
   }
-    /*-------fin index-----*/
-    /*-------inicio servicios-----*/
-  
-    /*-------fin servicios-----*/
-    /*--------inicio portafolio-------*/
-  
-    /*-------fin portafolio-------*/
-    /*--------inicio galeria-------*/
-  
-    /*-------fin galeria-------*/
-    /*--------inicio contacto-------*/
-    
-    /*-------fin contacto-------*/
-  @media screen and (max-width: 522px) {
-    /*------- inicio index ------*/
-  .contenido3{
+
+  /*-------fin index-----*/
+  /*-------inicio servicios-----*/
+  .casa1 img {
+    width: 100vw;
+    margin-right: 100px;
+  }
+
+  /*-------fin servicios-----*/
+  /*--------inicio portafolio-------*/
+
+  /*-------fin portafolio-------*/
+  /*--------inicio galeria-------*/
+
+  /*-------fin galeria-------*/
+  /*--------inicio contacto-------*/
+
+  /*-------fin contacto-------*/
+}
+
+@media screen and (max-width: 522px) {
+
+  /*------- inicio index ------*/
+  .contenido3 {
     display: flex;
     justify-content: center;
   }
-  .divA1{
+
+  .divA1 {
     justify-content: center;
   }
-  .divAul1 li{
+
+  .divAul1 li {
     font-size: 15px;
   }
-  .logo img{
+
+  .logo img {
     height: 100px;
     width: 150px;
     display: flex;
     justify-content: flex-end;
     margin-left: 20px;
   }
-    /*-------fin index-----*/
-    /*-------inicio servicios-----*/
-  
-    /*-------fin servicios-----*/
-    /*--------inicio portafolio-------*/
-  
-    /*-------fin portafolio-------*/
-    /*--------inicio galeria-------*/
-  
-    /*-------fin galeria-------*/
-    /*--------inicio contacto-------*/
-    
-    /*-------fin contacto-------*/
-  }
-  @media screen and (max-width: 570px) {
-    /*------- inicio index ------*/
-  .contenido3{
+
+  /*-------fin index-----*/
+  /*-------inicio servicios-----*/
+
+  .divA2 {
     display: flex;
+    flex-direction: column;
     justify-content: center;
   }
-  .divAul1 li{
+
+  .divAul2 li {
     font-size: 15px;
   }
-  .logo img{
+
+  .logo img {
     height: 100px;
     width: 150px;
     display: flex;
     justify-content: flex-end;
     margin-left: 20px;
   }
-    /*-------fin index-----*/
-    /*-------inicio servicios-----*/
-  
-    /*-------fin servicios-----*/
-    /*--------inicio portafolio-------*/
-  
-    /*-------fin portafolio-------*/
-    /*--------inicio galeria-------*/
-  
-    /*-------fin galeria-------*/
-    /*--------inicio contacto-------*/
-    
-    /*-------fin contacto-------*/
-  }
-  @media screen and (max-width: 620px) {
-    /*------- inicio index ------*/
-  .contenido img{
-    width: 400px;
-    height: 300px;
-  }
-    /*-------fin index-----*/
-    /*-------inicio servicios-----*/
-  
-    /*-------fin servicios-----*/
-    /*--------inicio portafolio-------*/
-  
-    /*-------fin portafolio-------*/
-    /*--------inicio galeria-------*/
-  
-    /*-------fin galeria-------*/
-    /*--------inicio contacto-------*/
-    
-    /*-------fin contacto-------*/
-  }
-  @media screen and (max-width: 640px) {
-    /*------- inicio index ------*/
-  .contenido3{
+
+  /*-------fin servicios-----*/
+  /*--------inicio portafolio-------*/
+
+  /*-------fin portafolio-------*/
+  /*--------inicio galeria-------*/
+
+  /*-------fin galeria-------*/
+  /*--------inicio contacto-------*/
+
+  /*-------fin contacto-------*/
+}
+
+@media screen and (max-width: 570px) {
+
+  /*------- inicio index ------*/
+  .contenido3 {
     display: flex;
     justify-content: center;
   }
-  .divAul1{
+
+  .divAul1 li {
     font-size: 15px;
   }
-  .logo img{
+
+  .logo img {
     height: 100px;
     width: 150px;
     display: flex;
     justify-content: flex-end;
     margin-left: 20px;
   }
-    /*-------fin index-----*/
-    /*-------inicio servicios-----*/
-  
-    /*-------fin servicios-----*/
-    /*--------inicio portafolio-------*/
-  
-    /*-------fin portafolio-------*/
-    /*--------inicio galeria-------*/
-  
-    /*-------fin galeria-------*/
-    /*--------inicio contacto-------*/
-    
-    /*-------fin contacto-------*/
+
+  .img img {
+    width: 200px;
+    height: 200px;
   }
-  @media screen and (max-width: 1024px) {
-    /*------- inicio index ------*/
-  .contenido3{
+
+  /*-------fin index-----*/
+  /*-------inicio servicios-----*/
+
+  .divA2 {
+    justify-content: center;
+  }
+
+  .divAul2 li {
+    font-size: 15px;
+  }
+
+  .logo img {
+    height: 100px;
+    width: 150px;
+    display: flex;
+    justify-content: flex-end;
+    margin-left: 20px;
+  }
+
+  /*-------fin servicios-----*/
+  /*--------inicio portafolio-------*/
+
+  /*-------fin portafolio-------*/
+  /*--------inicio galeria-------*/
+
+  /*-------fin galeria-------*/
+  /*--------inicio contacto-------*/
+
+  /*-------fin contacto-------*/
+}
+
+@media screen and (max-width: 640px) {
+
+  /*------- inicio index ------*/
+  .contenido3 {
     display: flex;
     justify-content: center;
-    margin-left:  50px;
+  }
+
+  .divAul1 {
+    font-size: 15px;
+  }
+
+  .logo img {
+    height: 100px;
+    width: 150px;
+    display: flex;
+    justify-content: flex-end;
+    margin-left: 20px;
+  }
+
+  /*-------fin index-----*/
+  /*-------inicio servicios-----*/
+  .casa1 {
+    width: 300px;
+    margin-left: 50px;
+  }
+
+  .contenido-servicios {
+    margin-right: 30px;
+  }
+
+  /*-------fin servicios-----*/
+  /*--------inicio portafolio-------*/
+
+  /*-------fin portafolio-------*/
+  /*--------inicio galeria-------*/
+
+  /*-------fin galeria-------*/
+  /*--------inicio contacto-------*/
+
+  /*-------fin contacto-------*/
+}
+
+@media screen and (max-width: 750px) and (min-width: 200px) {
+  .portafolio {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media screen and (max-width: 780px) {
+
+  /*------- inicio index ------*/
+
+  /*-------fin index-----*/
+  /*-------inicio servicios-----*/
+  .casa1 {
+    width: 250px;
+    margin-left: 0;
+  }
+
+  .contenido-servicios {
+    margin: 0 0 0 0;
+    margin-right: 0;
+  }
+
+  .contenido-servicios p {
+    font-size: 30px;
+  }
+
+  .servicios {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+
+  /*-------fin servicios-----*/
+  /*--------inicio portafolio-------*/
+
+  /*-------fin portafolio-------*/
+  /*--------inicio galeria-------*/
+
+  /*-------fin galeria-------*/
+  /*--------inicio contacto-------*/
+
+  /*-------fin contacto-------*/
+}
+
+@media screen and (max-width: 1024px) {
+
+  /*------- inicio index ------*/
+  .contenido3 {
+    display: flex;
+    justify-content: center;
+    margin-left: 50px;
     margin-right: 50px;
   }
-    /*-------fin index-----*/
-    /*-------inicio servicios-----*/
-  
-    /*-------fin servicios-----*/
-    /*--------inicio portafolio-------*/
-  
-    /*-------fin portafolio-------*/
-    /*--------inicio galeria-------*/
-  
-    /*-------fin galeria-------*/
-    /*--------inicio contacto-------*/
-    
-    /*-------fin contacto-------*/
+
+  /*-------fin index-----*/
+  /*-------inicio servicios-----*/
+  .casa1 {
+    width: 300px;
+    margin-left: 50px;
   }
-  @media screen and (max-width: 1200px) {
-    /*------- inicio index ------*/
-  .contenido3{
+
+  .contenido-servicios {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .servicios {
+    margin: 0 0 0 0;
+  }
+
+  /*-------fin servicios-----*/
+  /*--------inicio portafolio-------*/
+
+  /*-------fin portafolio-------*/
+  /*--------inicio galeria-------*/
+
+  /*-------fin galeria-------*/
+  /*--------inicio contacto-------*/
+
+  /*-------fin contacto-------*/
+}
+
+@media screen and (max-width: 1060px) {
+
+  /*------- inicio index ------*/
+  .contenido3 {
+    display: flex;
+    justify-content: center;
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+
+  /*-------fin index-----*/
+  /*-------inicio servicios-----*/
+
+  /*-------fin servicios-----*/
+  /*--------inicio portafolio-------*/
+
+  /*-------fin portafolio-------*/
+  /*--------inicio galeria-------*/
+
+  /*-------fin galeria-------*/
+  /*--------inicio contacto-------*/
+
+  /*-------fin contacto-------*/
+}
+
+@media screen and (max-width: 1200px) and (min-width: 750px) {
+  .portafolio {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+}
+
+
+@media screen and (max-width: 1200px) {
+
+  /*------- inicio index ------*/
+  .contenido3 {
     display: flex;
     justify-content: center;
   }
-    /*-------fin index-----*/
-    /*-------inicio servicios-----*/
-  
-    /*-------fin servicios-----*/
-    /*--------inicio portafolio-------*/
-  
-    /*-------fin portafolio-------*/
-    /*--------inicio galeria-------*/
-  
-    /*-------fin galeria-------*/
-    /*--------inicio contacto-------*/
-    
-    /*-------fin contacto-------*/
+
+  /*-------fin index-----*/
+  /*-------inicio servicios-----*/
+
+  /*-------fin servicios-----*/
+  /*--------inicio portafolio-------*/
+
+  /*-------fin portafolio-------*/
+  /*--------inicio galeria-------*/
+
+  /*-------fin galeria-------*/
+  /*--------inicio contacto-------*/
+
+  /*-------fin contacto-------*/
+}
+@media screen and (max-width: 1440px) {
+  .containergaleria {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr)
   }
+}
+@media screen and (max-width: 569px)  {
+  .containergaleria {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(2, 1fr)
   }
+  .galeria img{
+    width: 150px;
+    height: 200px;
+  }   
+}
+@media screen and (max-width: 360px) and (min-width: 200px) {
+  .containergaleria {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    margin-left: 0;
+  }
+  .galeria{
+    margin-left: 50px;
+  }
+  .imagen-galeria{
+    margin-left: 50px;
+  }
+}
+@media screen and (max-width: 852px) and (min-width: 570px) {
+  .containergaleria {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(2, 1fr)
+  }
+}
+@media screen and (max-width: 1150px) and (min-width: 853px) {
+  .containergaleria {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr)
+  }
+}
+@media screen and (max-width: 1440px) and (min-width: 1151px) {
+  .containergaleria {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr)
+  }
+}
