--- a/css/estilo.css
+++ b/css/estilo.css
@@ -654,7 +654,7 @@ section {
   }
 
   #contact_form {
-    margin-left: 60px;
+    margin-left: 10px;
     margin-bottom: 15px;
   }
 
@@ -1076,3 +1076,100 @@ section {
     grid-template-rows: repeat(2, 1fr)
   }
 }
+@media screen and (max-width: 1000px) and (min-width: 700px) {
+  .contenedor iframe{
+    width: 600px;
+    height: 600px;
+  }
+  #contacto{
+    grid-template-columns: 1fr;
+  }
+}
+@media screen and (max-width: 699px) and (min-width: 580px) {
+  .contenedor iframe{
+    width: 500px;
+    height: 600px;
+  }
+  #contacto{
+    grid-template-columns: 1fr;
+  }
+}
+@media screen and (max-width: 579px) and (min-width: 300px) {
+  .contenedor iframe{
+    width: 300px;
+    height: 300px;
+    margin-right: 15px;
+  }
+  #contacto{
+    grid-template-columns: 1fr;
+    margin-left: 0px;
+  }
+  .divA1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .row input {
+    width: 300px;
+  }
+  .row textarea{
+    width: 300px;
+  }
+}
+@media screen and (max-width: 1024px) and (min-width: 781px) {
+  .servicios{
+    grid-template-columns: 1fr;
+  }
+  .casa1{
+    margin-left: 300px;
+  }
+}
+@media screen and (max-width: 770px) and (min-width: 600px) {
+  .servicios{
+    grid-template-columns: 1fr;
+  }
+  .casa1{
+    margin-left: 250px;
+    margin-bottom: 50px;
+  }.contenido-servicios{
+    margin-top: 50px;
+  }
+}
+@media screen and (max-width: 599px) and (min-width: 526px) {
+  .servicios{
+    grid-template-columns: 1fr;
+  }
+  .casa1{
+    margin-left: 150px;
+    margin-bottom: 50px;
+  }
+.contenido-servicios{
+  margin-top: 50px;
+}
+}
+@media screen and (max-width: 525px) and (min-width: 469px) {
+  .servicios{
+    grid-template-columns: 1fr;
+  }
+  .casa1{
+    margin-left: 100px;
+    margin-bottom: 50px;
+  }
+.contenido-servicios{
+  margin-top: 50px;
+}
+}
+@media screen and (max-width: 470px) and (min-width: 300px) {
+  .servicios{
+    grid-template-columns: 1fr;
+  }
+  .casa1{
+    margin-left: 110px;
+    margin-bottom: 50px;
+  }
+.contenido-servicios{
+  margin-top: 50px;
+}
+}
+
+
